<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/remarks_table">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_new_remark_button"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_new_remark" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_remark_created_by"
                android:layout_gravity="center_horizontal"
                android:hint="@string/created_by"

                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/remark_text"
                android:layout_gravity="center_horizontal"
                android:hint="@string/remark_content"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/is_urgent_remark"
                android:layout_gravity="center_horizontal"
                android:hint="@string/is_remark"
                />


        </TableRow>
    </TableLayout>


</LinearLayout>