<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >




    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:paddingLeft="8pt"
            android:layout_centerInParent="true"
            android:background="@color/off_white"
            >




            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:paddingLeft="8pt"
                android:paddingBottom="1pt"
                android:layout_marginBottom="8pt"
                android:layout_centerInParent="true"
                android:background="#E0EDEE"

                >

                <TextView
                    android:paddingLeft="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="name"
                    android:id="@+id/first_text_view"
                    android:layout_below="@+id/view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="65dp"
                    android:textSize="11pt"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="Name"
                    android:ems="10"
                    android:id="@+id/first_name_profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="last name"
                    android:id="@+id/lasttxtview"
                    android:layout_below="@+id/view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:textSize="11pt"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="Name"
                    android:ems="10"
                    android:id="@+id/last_name_profile" />

            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:id="@+id/updatebtn"
                android:layout_gravity="center_horizontal" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/table"
                >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView

                    android:textColor="@color/sinch_purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="35dp"
                    android:paddingBottom="1dp"
                    android:textSize="20sp"
                    android:text="@string/departments"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_alignBottom="@+id/txtSender"/>
            <TextView
                    android:id="@+id/txtDate"

                    android:textColor="@color/sinch_purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:paddingBottom="1dp"
                    android:paddingRight="35dp"
                    android:textSize="20sp"
                    android:text="@string/roles"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_alignBottom="@+id/txtSender"/>

                <TextView
                    android:id="@+id/txtIsDuty"

                    android:textColor="@color/sinch_purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:paddingBottom="1dp"
                    android:paddingRight="50dp"
                    android:textSize="20sp"
                    android:text="@string/in_duty"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_alignBottom="@+id/txtSender"/>






            </TableRow>
    </TableLayout>





        </LinearLayout>

    </ScrollView>


</RelativeLayout>